--- a/index.html
+++ b/index.html
@@ -7,14 +7,49 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
     <link rel="stylesheet" href="src/style.css" />
-    <title>Document</title>
+    <title>Weather App</title>
 </head>
 
 <body>
-    <h1>
-        Today's Weather
-    </h1>
-
+    <div class="container">
+        <div class="weather-app">
+            <h1>
+                Zeerust
+            </h1>
+            <ul>
+                <li>
+                    Tuesday 09:00
+                </li>
+                <li>
+                    Sunny
+                </li>
+            </ul>
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="Sunny" />
+                11 °C | °F
+            </div>
+            <div class="col-6">
+                <ul>
+                    <li>
+                        Precipitation:0%
+                    </li>
+                    <li>
+                        Humidity : 73%
+                    </li>
+                    <li>
+                        Wind : 2km/h
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <small>
+            <a href="https://github.com/phuti28/Weather-app-1.git" target="_blank">This project is created by Phuti
+                Moketla & is
+                open-sourced by Github & Hosted on Netlify!</a>
+        </small>
+    </div>
     <script src="src/app.js"></script>
 </body>
 
