styled the main elements of the project

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 open-sourced by Github & Hosted on Netlify!</a>
         </small>
     </div>
+    </div>
     <script src="src/app.js"></script>
 </body>
 
