--- a/index.html
+++ b/index.html
@@ -12,43 +12,52 @@
 
 <body>
     <div class="container">
-        <div class="weather-app">
-            <h1>
-                Zeerust
-            </h1>
-            <ul>
-                <li>
-                    Tuesday 09:00
-                </li>
-                <li>
-                    Sunny
-                </li>
-            </ul>
-        </div>
-        <div class="row">
-            <div class="col-6">
-                <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="Sunny" />
-                11 °C | °F
+        <div class="weather-app-wrapper">
+            <div class="weather-app">
+                <div class="overview">
+                    <h1>
+                        Zeerust
+                    </h1>
+                    <ul>
+                        <li>
+                            Tuesday 09:00
+                        </li>
+                        <li>
+                            Sunny
+                        </li>
+                    </ul>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <div class="d-flex weather-temperature">
+                            <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="Sunny" id="icon" />
+                            <strong> 11 </strong>
+                            <span class="units">°C | <a href:"#"> °F </a></span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-6">
+                    <ul>
+                        <li>
+                            Precipitation:0%
+                        </li>
+                        <li>
+                            Humidity : 73%
+                        </li>
+                        <li>
+                            Wind : 2km/h
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="col-6">
-                <ul>
-                    <li>
-                        Precipitation:0%
-                    </li>
-                    <li>
-                        Humidity : 73%
-                    </li>
-                    <li>
-                        Wind : 2km/h
-                    </li>
-                </ul>
-            </div>
         </div>
-        <small>
-            <a href="https://github.com/phuti28/Weather-app-1.git" target="_blank">This project is created by Phuti
-                Moketla & is
-                open-sourced by Github & Hosted on Netlify!</a>
-        </small>
+    </div>
+    <small>
+        <a href="https://github.com/phuti28/Weather-app-1.git" target="_blank">This project is created by Phuti
+            Moketla & is
+            open-sourced by Github & Hosted on Netlify!</a>
+    </small>
     </div>
     </div>
     <script src="src/app.js"></script>
