--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>Weather App</title>
 </head>
@@ -15,23 +16,17 @@
         <div class="weather-app-wrapper">
             <div class="weather-app">
                 <div class="overview">
-                    <h1>
-                        Zeerust
-                    </h1>
+                    <h1 id="city"></h1>
                     <ul>
-                        <li>
-                            Tuesday 09:00
-                        </li>
-                        <li>
-                            Sunny
-                        </li>
+                        <li>Last updated : <span="date"></span></li>
+                        <li id="description"></li>
                     </ul>
                 </div>
                 <div class="row">
                     <div class="col-6">
                         <div class="d-flex weather-temperature">
                             <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="Sunny" id="icon" />
-                            <strong> 11 </strong>
+                            <strong id="temperature"></strong>
                             <span class="units">°C | <a href:"#"> °F </a></span>
                         </div>
                     </div>
@@ -43,10 +38,10 @@
                             Precipitation:0%
                         </li>
                         <li>
-                            Humidity : 73%
+                            Humidity : <span id="humidity"> % </span>
                         </li>
                         <li>
-                            Wind : 2km/h
+                            Wind : <span id="wind"> km/h </span>
                         </li>
                     </ul>
                 </div>
