updated the Javascript

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                 <div class="overview">
                     <h1 id="city"></h1>
                     <ul>
-                        <li>Last updated : <span="date"></span></li>
+                        <li>Last updated : <span id="date"></span>
+                        </li>
                         <li id="description"></li>
                     </ul>
                 </div>
