--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="row">
                     <div class="col-6">
                         <div class="d-flex weather-temperature">
-                            <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="Sunny" id="icon" />
+                            <img src="https://openweathermap.org/img/wn/50d@2x.png" alt="fog" id="icon" />
                             <strong id="temperature"></strong>
                             <span class="units">°C | <a href:"#"> °F </a></span>
                         </div>
