added links in Html and  units conversion

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <div class="d-flex weather-temperature">
                             <img src="https://openweathermap.org/img/wn/50d@2x.png" alt="fog" id="icon" />
                             <strong id="temperature"></strong>
-                            <span class="units">°C | <a href:"#"> °F </a></span>
+                            <span class="units"><a href="#" class="active">°C</a> | <a href="#">°F</a></span>
                         </div>
                     </div>
                 </div>
