updated the span id's on html

--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
                     <div class="col-6">
                         <div class="d-flex weather-temperature">
                             <img src="https://openweathermap.org/img/wn/50d@2x.png" alt="fog" id="icon" />
-                            <strong id="temperature"></strong>
-                            <span class="units"><a href="#" class="active">°C</a> | <a href="#">°F</a></span>
+                            <strong id="temperature">
+                            </strong>
+                            <span class="units"><a href="#" id="celcius-link" class="active">°C</a> | <a href="#"
+                                    id="fahrenheit-link">°F</a></span>
                         </div>
                     </div>
                 </div>
