Added  a weather forecast

--- a/index.html
+++ b/index.html
@@ -60,29 +60,14 @@
                     </ul>
                 </div>
             </div>
-            <div class="Weather-forecast">
-                <div class="row">
-                    <div class="col-2">
-                        <div class="weather-forecast-date">
-                            Thur
-                        </div>
-                        <img src="https://openweathermap.org/img/wn/50d@2x.png" alt="" width="42" />
-                        <div class="weather-forecast-temperature">
-                            <span class="weather-forecast-temperature-max">
-                                18°</span>
-                            <span class="weather-forecast-temperature-min">
-                                12°</span>
-                        </div>
-                    </div>
-                </div>
+            <div class="Weather-forecast" id="forecast">
             </div>
+            <small>
+                <a href="https://github.com/phuti28/Weather-app-1.git" target="_blank">This project is created by Phuti
+                    Moketla & is
+                    open-sourced by Github & Hosted on Netlify!</a>
+            </small>
         </div>
-    </div>
-    <small>
-        <a href="https://github.com/phuti28/Weather-app-1.git" target="_blank">This project is created by Phuti
-            Moketla & is
-            open-sourced by Github & Hosted on Netlify!</a>
-    </small>
     </div>
     </div>
     <script src="src/app.js"></script>
