Updated my name

--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@
             <div class="Weather-forecast" id="forecast">
             </div>
             <small>
-                <a href="https://github.com/phuti28/Weather-app-1.git" target="_blank">This project is created by Phuti
-                    Moketla & is
-                    open-sourced by Github & Hosted on Netlify!</a>
+                <a href="https://github.com/phuti28/Weather-app-1.git" target="_blank">Open-source code!</a>
+                by Phuti Moketla!
             </small>
         </div>
     </div>
