--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="Weather-forecast" id="forecast">
             </div>
             <small>
-                <a href="https://github.com/phuti28/Weather-app-1.git" target="_blank">Open-source code!</a>
+                <a href="https://github.com/phuti28/Weather-app-1.git" target="_blank">Open-source code</a>
                 by Phuti Moketla!
             </small>
         </div>
